added more codes for nozel switch on and off functionality

--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -58,3 +58,11 @@
     text-align: center;
     margin: 3px 0px 2px 0px;
 }
+
+.offOn-btn{
+    width: 68px;
+    height: 68px;
+    margin: 0px 0px 15px 0px;
+
+    
+}
